Upgrade to Java 21 and fix comment/path bugs
- Upgrade build target from Java 7 to Java 21 via maven-compiler-plugin
  release flag; bump maven-jar/source/javadoc plugins to Java 21
  compatible versions and remove the redundant jar-plugin execution
- Upgrade snakeyaml 1.13 -> 2.6 (fixes CVE-2022-1471) and adapt
  BaseConfigMapper to the new Representer/CustomClassLoaderConstructor
  constructors that require Dumper/LoaderOptions
- Upgrade testng 6.8.7 -> 7.10.0
- Fix comments lost when load() auto-saves new fields: unify field path
  resolution into a single resolvePath(Field) used by collectComments,
  internalSave and internalLoad so comment keys always match data keys
- Fix ConfigMapper.loadFromMap recursion termination (checked
  YamlConfig.class twice instead of Object.class)
- Modernize deprecated APIs: Class.newInstance() ->
  getDeclaredConstructor().newInstance(); boxing constructors -> valueOf
- Clean up raw types (Class/Map/List) and add diamond operators
- Add CommentUpdateTest regression test
- Update Java/snakeyaml/testng versions in build config