@@ -23,26 +23,26 @@ public class Config implements Converter {
     }
 
     @Override
-    public Object fromConfig(Class type, Object section, ParameterizedType genericType) throws Exception {
+    public Object fromConfig(Class<?> type, Object section, ParameterizedType genericType) throws Exception {
         YamlConfig obj = (YamlConfig) newInstance(type);
 
         // Inject Converter stack into subconfig
-        for (Class aClass : internalConverter.getCustomConverters()) {
+        for (Class<? extends Converter> aClass : internalConverter.getCustomConverters()) {
             obj.addConverter(aClass);
         }
 
-        obj.loadFromMap((section instanceof Map) ? (Map) section : ((ConfigSection) section).getRawMap(), type);
+        obj.loadFromMap((section instanceof Map) ? (Map<?, ?>) section : ((ConfigSection) section).getRawMap(), type);
         return obj;
     }
-    
+
     // recursively handles enclosed classes
-    public Object newInstance(Class type) throws Exception {
-        Class enclosingClass = type.getEnclosingClass();
+    public Object newInstance(Class<?> type) throws Exception {
+        Class<?> enclosingClass = type.getEnclosingClass();
         if (enclosingClass != null) {
             Object instanceOfEnclosingClass = newInstance(enclosingClass);
             return type.getConstructor(enclosingClass).newInstance(instanceOfEnclosingClass);
         } else {
-            return type.newInstance();
+            return type.getDeclaredConstructor().newInstance();
         }
     }
 
